# create-tagged-releases

./: .gitignore  Dockerfile  README.md  config.yml  create-tagged-releases.py  pyproject.toml
.github/: README.md
